--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/inria-sans": "^5.0.13",
+    "firebase": "^10.12.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
