--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@emotion/styled": "^11.11.5",
     "@fontsource/inria-sans": "^5.0.13",
     "firebase": "^10.12.2",
+    "markdown-to-jsx": "^7.4.7",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "zustand": "^4.5.2"
   }
 }
